force-app/main/default/objects/ExternalSignal__c/ExternalSignal__c.object-meta.xml
<CustomObject>
    <label>외부 영업신호</label>
    <nameField>
        <displayFormat>SIG-{0000}</displayFormat>
        <label>시그널 번호</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>외부 영업신호</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>