force-app/main/default/objects/ExternalSignal__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>법인 고객</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>영업시그널</relationshipLabel>
    <relationshipName>External_Signals</relationshipName>
    <type>Lookup</type>
</CustomField>