force-app/main/default/objects/ExternalSignal__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>금액</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>