force-app/main/default/objects/ExternalSignal__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <label>신뢰도</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>