force-app/main/default/objects/ExternalSignal__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <description>DART 공시의 자연키(corp_code + &apos;_&apos; + rcept_no). 외부 시스템(DART) 기준 중복 없이 upsert 하기 위한 External ID.</description>
    <externalId>true</externalId>
    <inlineHelpText>DART 기업코드와 공시 접수번호를 결합한 고유 키입니다. 동일 공시의 중복 적재를 방지합니다.</inlineHelpText>
    <label>외부 키</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>