force-app/main/default/objects/ExternalSignal__c/fields/Generated_At__c.field-meta.xml
<CustomField>
    <fullName>Generated_At__c</fullName>
    <description>NewsDailySummarySaveQueueable가 이 일일 요약을 마지막으로 생성해 저장한 시각. 요약이 최신인지 판단하는 데 사용한다.</description>
    <inlineHelpText>일일 요약이 마지막으로 생성된 시각입니다.</inlineHelpText>
    <label>생성 시각</label>
    <type>DateTime</type>
</CustomField>