force-app/main/default/objects/ExternalSignal__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>산업군</label>
    <description>산업군 단위 뉴스 시그널을 특정 회사(Account/Lead) 룩업 없이 분류·적재하기 위한 필드. 값 세트는 Account.Industry(KSIC 대분류)와 동일하게 맞춰 산업군 뉴스를 Account 산업군 기준으로 grounding 한다. 기업 고유 뉴스는 Account__c/Lead__c 룩업으로 연결하고, 산업군 뉴스는 이 필드 값으로 연결한다.</description>
    <inlineHelpText>산업군 뉴스일 때만 Account 산업군(KSIC 대분류)과 동일한 값을 선택하세요. 특정 회사 뉴스는 비워두고 Account/Lead 룩업으로 연결합니다.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>농업, 임업 및 어업</fullName>
            </value>
            <value>
                <fullName>광업</fullName>
            </value>
            <value>
                <fullName>제조업</fullName>
            </value>
            <value>
                <fullName>전기, 가스, 증기 및 수도사업</fullName>
            </value>
            <value>
                <fullName>하수·폐기물 처리, 원료재생 및 환경복원업</fullName>
            </value>
            <value>
                <fullName>건설업</fullName>
            </value>
            <value>
                <fullName>도매 및 소매업</fullName>
            </value>
            <value>
                <fullName>운수업</fullName>
            </value>
            <value>
                <fullName>숙박 및 음식점업</fullName>
            </value>
            <value>
                <fullName>출판, 영상, 방송통신 및 정보서비스업</fullName>
            </value>
            <value>
                <fullName>금융 및 보험업</fullName>
            </value>
            <value>
                <fullName>부동산업 및 임대업</fullName>
            </value>
            <value>
                <fullName>전문, 과학 및 기술 서비스업</fullName>
            </value>
            <value>
                <fullName>사업시설관리 및 사업지원 서비스업</fullName>
            </value>
            <value>
                <fullName>공공행정, 국방 및 사회보장 행정</fullName>
            </value>
            <value>
                <fullName>교육 서비스업</fullName>
            </value>
            <value>
                <fullName>보건업 및 사회복지 서비스업</fullName>
            </value>
            <value>
                <fullName>예술, 스포츠 및 여가관련 서비스업</fullName>
            </value>
            <value>
                <fullName>협회 및 단체, 수리 및 기타 개인 서비스업</fullName>
            </value>
            <value>
                <fullName>가구내 고용활동 및 달리 분류되지 않은 자가소비 생산활동</fullName>
            </value>
            <value>
                <fullName>국제 및 외국기관</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>