force-app/main/default/objects/ExternalSignal__c/fields/Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Date__c</fullName>
    <label>만기일</label>
    <type>Date</type>
</CustomField>