force-app/main/default/objects/ExternalSignal__c/fields/Relevance_Score__c.field-meta.xml
<CustomField>
    <fullName>Relevance_Score__c</fullName>
    <label>연관성 점수</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>