force-app/main/default/objects/ExternalSignal__c/fields/Signal_Date__c.field-meta.xml
<CustomField>
    <fullName>Signal_Date__c</fullName>
    <label>시그널 일자</label>
    <type>Date</type>
</CustomField>