force-app/main/default/objects/ExternalSignal__c/fields/Signal_Type__c.field-meta.xml
<CustomField>
    <fullName>Signal_Type__c</fullName>
    <label>시그널 유형</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>뉴스</fullName>
            </value>
            <value>
                <fullName>공시</fullName>
            </value>
            <value>
                <fullName>수주</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>