force-app/main/default/objects/ExternalSignal__c/fields/Source_URL__c.field-meta.xml
<CustomField>
    <fullName>Source_URL__c</fullName>
    <label>출처 URL</label>
    <type>Url</type>
</CustomField>