force-app/main/default/objects/ExternalSignal__c/fields/Summary_Date__c.field-meta.xml
<CustomField>
    <fullName>Summary_Date__c</fullName>
    <description>일일 뉴스 요약이 대상으로 하는 날짜. NewsDailySummarySaveQueueable가 이 날짜로 기존 일일요약 레코드를 찾아 하루 한 건만 유지(있으면 갱신, 없으면 생성)한다.</description>
    <inlineHelpText>일일 요약이 대상으로 하는 날짜입니다. 날짜당 한 건만 유지됩니다.</inlineHelpText>
    <label>요약 일자</label>
    <type>Date</type>
</CustomField>