force-app/main/default/objects/ExternalSignal__c/fields/Summary_Text__c.field-meta.xml
<CustomField>
    <fullName>Summary_Text__c</fullName>
    <description>News_Daily_Summary 프롬프트 템플릿(LLM)이 담당 기업·산업군 뉴스를 grounding해 생성한 일일 요약 본문. Signal_Type__c=&apos;일일요약&apos; 레코드에만 채워지며, 기존 Summary__c(255자)로는 부족한 여러 줄 요약을 담는다. 홈 대시보드 뉴스 요약 표시에 사용한다.</description>
    <inlineHelpText>AI가 생성한 일일 뉴스 요약 본문입니다. 일일요약 유형(Signal_Type__c) 레코드에만 사용됩니다.</inlineHelpText>
    <label>요약 본문</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>