force-app/main/default/objects/ExternalSignal__c/listViews/All_view.listView-meta.xml
<ListView>
    <fullName>All_view</fullName>
    <columns>NAME</columns>
    <columns>Signal_Type__c</columns>
    <columns>Title__c</columns>
    <columns>Account__c</columns>
    <columns>Industry__c</columns>
    <columns>Relevance_Score__c</columns>
    <columns>Signal_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>전체</label>
</ListView>